# RemeshingTree

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  ReadMe.txt  pseudo_code  pseudo_code.bak
cmake/: FindGLM.cmake  FindNanoGUI.cmake  FindSurfaceMesh.cmake
libs/glm/: FindGLM.cmake
libs/nanogui/python/: unifdef.XbtyY1
libs/nanogui/src/: unifdef.dGysgc
models/: bunny.off  geralt_tex_roots.off  max.off
remeshing/: mesh_processing.h  viewer.cpp  viewer.h
tree_mesh/: CMakeLists.txt  main.cpp  mesh_processing.cpp  viewer.cpp
tree_mesh/includes/: utils.h
tree_mesh/includes/mesh_processing/: mesh_processing.h  tree_processing.h  wireframe_processing.h
tree_mesh/includes/viewer/: viewer.h
tree_mesh/src/: utils.cpp
tree_mesh/src/mesh_processing/: mesh_processing.cpp  tree_processing.cpp  wireframe_processing.cpp
tree_mesh/src/viewer/: viewer.cpp
